...
  "iniciarSesionBtn": "Iniciar sesión",
  "crearCuentaBtn": "Crear cuenta",
  "nombreCompleto": "Nombre completo",
  "correoElectronico": "Correo electrónico",
  "contrasena": "Contraseña",
  "registrarseBtn": "Registrarse",
  "continuarInvitado": "Continuar como invitado",
  "noTienesCuenta": "¿No tienes cuenta?",
  "yaTienesCuenta": "¿Ya tienes cuenta?",
  "registrateAccion": "Regístrate",
  "iniciaSesionAccion": "Inicia sesión",
  "ingresaFuncion": "Ingresa una función para graficar",
  "proximamente": "Próximamente",
...
