...
            },
          ),

          _buildDrawerItem(
            context: context,
            icon: Icons.architecture_rounded,
            title: 'Mecánica Vectorial Estática',
            isDark: isDark,
            onTap: () {
              chatProvider.setSection('Mecánica Vectorial Estática');
              Navigator.pop(context);

              setState(() {
...
                                                  ? Colors.white70
                                                  : Colors.black54)),
                                      actions: [
                                        TextButton(
                                          onPressed: () =>
                                              Navigator.pop(ctx, false),
                                          child: const Text('Cancelar',
                                              style: TextStyle(
                                                  color: Colors.grey)),
                                        ),
                                        TextButton(
                                          onPressed: () =>
                                              Navigator.pop(ctx, true),
...
